--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,49 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+body {
+  padding-top: 80px;
+  background: #f2f2f2;
+  color: #463C6D;
+}
+
+// Navbar styling
+.navbar {
+ background: #463C6D;
+ padding-bottom: 10px;
+}
+
+.navbar-default .navbar-brand {
+  padding-top: 20px;
+  font-size: 150%;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.navbar-default .navbar-brand:hover {
+  color: #ff0000;
+}
+
+.navbar-default {
+  border: #64103F;
+}
+
+.navbar-nav {
+  padding-top: 10px;
+  padding-right: 20px;
+}
+
+.navbar-default .navbar-nav li > a {
+  font-weight: bold;
+  font-size: 130%;
+  color: #ffffff;
+}
+
+.navbar-default .navbar-nav li > a:hover {
+  color: #ff0000;
+}
+
+// Form styling
+.page-heading, div > label {
+  color: #64103F;
+}
